--- a/styles/styles.css
+++ b/styles/styles.css
@@ -51,6 +51,13 @@ body {
     position: sticky;
 }
 
+.style-of-div {
+    border-style: solid;
+    border-width: 2px 10px 4px 20px;
+    margin-bottom: 10px;
+    background-color: aquamarine;
+}
+
 
 
 
