Made ticket master query work better for a state code as well as starting to add materialize classes to dynamic objects

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,6 +25,10 @@ body {
     margin-bottom: 1rem; 
 }
 
+.result {
+    max-width: 240px;
+}
+
 #breweries-list {
     flex: 1 0 auto;
     margin-right: .5rem;
