--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,39 +30,48 @@ body {
     margin-bottom: 1rem; 
 }
 
-.result {
+.cards-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    overflow-y: scroll;
+    overflow-x: none;
+    max-height: 100vh;
+}
+
+.map-container {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    height: 100%;
+}
+
+.card {
+    margin: .5rem;
+}
+
+.result,
+.card {
     max-width: 240px;
 }
 
-#breweries-list {
-    flex: 1 0 auto;
-    margin-right: .5rem;
-}
-
-.brewery-container {
-    border: 1px solid black;
-    border-radius: .4rem;
-    margin: .25rem;
-    padding: .25rem;
-    cursor: pointer;
+.event-image {
+    width:240px;
+    height: auto;
 }
 
 #map {
-    height: 640px;
+    padding-top: 1rem;
+    height: 420px;
     flex: 1 1 auto;
     position: sticky;
-}
-
-.style-of-div {
-    border-style: solid;
-    border-width: 2px 10px 4px 20px;
-    margin-bottom: 10px;
-    background-color: aquamarine;
+    align-self: center;
 }
 
 .hidden {
     display: none;
 }
+
 #centers{
     text-align:center;
 }
@@ -112,6 +121,11 @@ body {
     width: 400px;
     margin-left: -200px; /* half of you width */
 
+}
+
+.select-event-link,
+.select-place-link {
+    cursor: pointer;
 }
 
 
