Made search button in section 2 scroll down to the last section to the results when the api response is received.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -52,12 +52,16 @@ body {
 
 .result,
 .card {
-    max-width: 240px;
+    width: 240px;
 }
 
 .event-image {
     width:240px;
     height: auto;
+}
+
+.event-location {
+    color: blue;
 }
 
 #map {
