--- a/styles/styles.css
+++ b/styles/styles.css
@@ -86,6 +86,14 @@ body {
     justify-content: center;
   }
 
+#section0 {
+    height: 100vh; 
+    background: lightgoldenrodyellow;
+    text-align: center;
+}
+
+
+
 #section1 {
     height:100vh;
     background:lightgray;
@@ -105,6 +113,9 @@ body {
     height:100vh;
     background: lightpink; 
 }
+
+
+
 
 .container1 {
         position: absolute;
