updating UI on my branch

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,6 +18,7 @@ body {
     height: 100%;
     width: 100%;
     font-size: 18px;
+    
 }
 
 .content {
@@ -86,17 +87,41 @@ body {
     justify-content: center;
   }
 
+
+
+
 #section0 {
-    height: 100vh; 
-    background: lightgoldenrodyellow;
-    text-align: center;
+   background-image: url("https://www.transparenttextures.com/patterns/beige-paper.png"); 
+   
+} 
+ #overlay0 { 
+    height: 100vh;
+    /* background: lightgoldenrodyellow; 
+    opacity: 0.6; */
 }
 
+
+.nightout {
+  text-align: center;
+  padding-top: 100px;
+  font-size: 40px;
+  /* font-family: 'Amaranth', sans-serif; */
+  font-family: 'Vidaloka', serif;
+
+}
 
 
 #section1 {
     height:100vh;
-    background:lightgray;
+    background-color: #ebcdc5;
+    background-image: url("https://www.transparenttextures.com/patterns/clean-textile.png")
+}
+.text-color {
+    color: black;
+}
+
+.section1-content {
+    padding-top: 150px;
 }
 
 #section2 {
