--- a/styles/styles.css
+++ b/styles/styles.css
@@ -199,6 +199,24 @@ body {
     overflow: hidden;
 }
 
+@keyframes typewriter {
+    from {
+        width: 0;   
+    }
+    to {
+        width: 15em; 
+    }
+}
+
+@keyframes blinkTextCursor {
+    from {
+        border-right-color: rgba(255,255,255, 0.75)
+        }
+    to {
+        border-right-color: transparent;
+    }
+}
+
 /*
 ===============================================
 Typography
