additional changes to css

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -161,8 +161,8 @@ body {
 #section3 {
     height:100vh;
     
-    background: lightslategray;
-    background-image: url("https://www.transparenttextures.com/patterns/clean-textile.png")
+    background: lightblue;
+    background-image: url("https://www.transparenttextures.com/patterns/beige-paper.png")
     /* background-image:url("http://www.mycoolbackgrounds.com/backgrounds/19629/Night%20Skyline,%20Atlanta,%20Georgia.jpg"); */
     /* background-size: 100%; */
     /* opacity: 0x; */
