--- a/styles/styles.css
+++ b/styles/styles.css
@@ -84,6 +84,7 @@ body {
 }
 
 .event-location {
+    font-size: small;
     color: blue;
 }
 
@@ -175,6 +176,10 @@ body {
     
 }
 
+.card a, .card-details{
+    text-align: center;
+}
+
 #section4{
     height:100vh;
     background-image: url("https://www.transparenttextures.com/patterns/beige-paper.png"); 
@@ -248,7 +253,9 @@ body {
     padding-left: 30px;
 }
 
-
+.card {
+    background-color:lightgray;
+}
 
 /*
 ===============================================
