--- a/styles/styles.css
+++ b/styles/styles.css
@@ -246,6 +246,9 @@ body {
     }
 }
 
+.card-title {
+    text-shadow: 1.5px 1.5px gray;
+}
 
 
 #results-list {
@@ -256,7 +259,30 @@ body {
 .card {
     background-color:lightgray;
 }
+.card:hover {
+    background-color:gray;
+    box-shadow: 5px 5px lightgray;
+}
 
+.date-div {
+    font-size: small;
+}
+
+.rating-color {
+    color: yellow;
+}
+
+#title1{
+    text-shadow: 1.5px 1.5px gray;
+}
+
+#results-list {
+    text-align: center;
+}
+
+h3 {
+    text-shadow: 2px 2px gray;
+}
 /*
 ===============================================
 Typography
@@ -276,6 +302,7 @@ h4 {
     top:100px;
     left:75px;
     align-self: center;
+    box-shadow: 5px 5px rgb(150, 144, 144);
  }
 
 
