--- a/styles/styles.css
+++ b/styles/styles.css
@@ -256,6 +256,15 @@ body {
     }
 }
 
+@keyframes typewriter1 {
+    from {
+        width: 0;   
+    }
+    to {
+        width: 15em; 
+    }
+}
+
 
 .card-title {
     text-shadow: 1.5px 1.5px gray;
